Fix the colour contrast for confirmation page
While doing so I have also made the following amends and improvements:

- updated the markup for the h1. Updating that to match the pattern of being wrapped in a parent div. Separated the link out from the h1 and updated the panel colour to match with the latest pattern. I have implemented the correct styles and classes which increase font size  - https://design-system.service.gov.uk/patterns/confirmation-pages/
- removed the tab-index="-1" from <main> which was forcing the whole of the main to be read out as a form control
- updated the second bullet point so that the email link is at the end of the sentence, which improves context and content flow for screen reader users (have demoed this to Dan Lacey and terry.simpson)
- removed the superfluous <hr> at the bottom of the page which is a) not needed and b) was being read out by screen readers
- removed the non pattern standard tick icon from the h1, which was also getting read out by screen readers
- tidied up the messaging and content for the second bullet point and moved the content to messages file
- removed unnecessary empty divs with clearfix class
- general code and indentation tidy up

--- a/frontend/sass/custom/_buttons.scss
+++ b/frontend/sass/custom/_buttons.scss
@@ -152,11 +152,11 @@ h1.form-title a.link-back{
 	visibility:hidden;
 }
 
-h1.form-title a.confirm-download-link{
+a.confirm-download-link{
 	margin-top: 2em;
-    display: inline-block;
-    color: #fff;
-    font-weight: 800;
+  display: inline-block;
+  color: #fff;
+  font-weight: 800;
 }
 
 #timeout-sign-out-btn {
